docs/api/qiskit/0.25/qiskit.algorithms.Eigensolver.mdx
---
title: Eigensolver (v0.25)
description: API reference for qiskit.algorithms.Eigensolver in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.Eigensolver
---

<span id="qiskit-algorithms-eigensolver" />

# qiskit.algorithms.Eigensolver

<Class id="qiskit.algorithms.Eigensolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/algorithms/eigen_solvers/eigen_solver.py" signature="Eigensolver" modifiers="class">
  The Eigensolver Interface.

  Algorithms that can compute eigenvalues for an operator may implement this interface to allow different algorithms to be used interchangeably.

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.Eigensolver.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                              |                                                                              |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.algorithms.Eigensolver.__init__ "qiskit.algorithms.Eigensolver.__init__")()                                                             | Initialize self.                                                             |
  | [`compute_eigenvalues`](#qiskit.algorithms.Eigensolver.compute_eigenvalues "qiskit.algorithms.Eigensolver.compute_eigenvalues")(operator\[, aux\_operators]) | Computes eigenvalues.                                                        |
  | [`supports_aux_operators`](#qiskit.algorithms.Eigensolver.supports_aux_operators "qiskit.algorithms.Eigensolver.supports_aux_operators")()                   | Whether computing the expectation value of auxiliary operators is supported. |

  ### compute\_eigenvalues

  <Function id="qiskit.algorithms.Eigensolver.compute_eigenvalues" signature="compute_eigenvalues(operator, aux_operators=None)" modifiers="abstract">
    Computes eigenvalues. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** (`OperatorBase`) – Qubit operator of the Observable
    *   **aux\_operators** (`Optional`\[`List`\[`Optional`\[`OperatorBase`]]]) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Return type**

    `EigensolverResult`

    **Returns**

    EigensolverResult
  </Function>

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.Eigensolver.supports_aux_operators" signature="supports_aux_operators()" modifiers="classmethod">
    Whether computing the expectation value of auxiliary operators is supported.

    **Return type**

    `bool`

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise
  </Function>
</Class>

